# Federal-Compliance-Copilot

./: .gitignore  README.md  pyproject.toml
use_case_contracts/: bedrock_client.py
