[project]
name = "federal-compliance-copilot"
version = "0.1.0"
description = "RFP requirements workflow facilitator"
authors = [
    {name = "Antonio Zavaleta",email = "antonio.zavaleta@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.39.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
